# watermelon-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: watermelon-api-AutoDeployTrigger-01d5f7fa-37e6-4c13-b195-1aed13314306.yml
docs/: wholesale_price_troubleshooting.md
src/app/: main.py  scheduler.py
src/app/api/v1/endpoints/: prices.py
src/app/core/: config.py
src/app/model/: predictor.py  ridge_production.joblib
src/app/pipeline/: collect_cpi.py  collect_opinet.py  collect_price.py  collect_volume.py  collect_weather.py  merge_all_features.py  run_pipeline.py  scheduler.py  upload_to_blob.py
src/app/schema/: price.py
src/app/service/: prediction_writer.py
tests/: test_pipeline.py
